--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="CSS/Ferst-Block-general-page.css">
     <link rel="stylesheet" href="CSS/Two-block-general-page.css">
     <link rel="stylesheet" href="CSS/tree-block-general-page.css">
+    <link rel="stylesheet" href="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
@@ -140,7 +141,7 @@
                 <h2>ESSENTIAL KILT PACKAGES</h2>
             </div>
             <div class="item2-left">
-                <div class="item-left-image"></div>
+                <div class="item2-left-image"></div>
             </div>
             <div class="item3-right">
                 <div class="item3-right-image"></div>
@@ -148,11 +149,15 @@
             <div class="item4-left">
                 <h2>LUXURY PRINCE CHARLIE JACKET OUTFIT WITH <br> 8 YARD 16OZ LOCHCARRON STROME KILT</h2>
             </div>
-                        <div class="item5-right">
+            <div class="item5-right">
                 <h2>Economy Prince Charlie Jacket Outfit <br> with 16oz 5 Yard Handmade Wool</h2>
 
-
-
+        </section>
+        <section class="container-block4-general">
+            <div class="block-left-image"><div class="image-left"></div></div>
+            <div class="block-right-image"><div class="image-right"></div></div>
+            <div class="block-right-bottom"><h2>Women's Kilts</h2></div>
+            <div class="block-right-bottom"><h2>Children's Kilts</h2></div>
         </section>
 
 
