--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="CSS/Ferst-Block-general-page.css">
     <link rel="stylesheet" href="CSS/Two-block-general-page.css">
     <link rel="stylesheet" href="CSS/tree-block-general-page.css">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/CSS/four-block-general.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
@@ -154,10 +154,18 @@
 
         </section>
         <section class="container-block4-general">
-            <div class="block-left-image"><div class="image-left"></div></div>
-            <div class="block-right-image"><div class="image-right"></div></div>
-            <div class="block-right-bottom"><h2>Women's Kilts</h2></div>
-            <div class="block-right-bottom"><h2>Children's Kilts</h2></div>
+            <div class="block-left-image">
+                <div class="image-left"></div>
+            </div>
+            <div class="block-right-image">
+                <div class="image-right"></div>
+            </div>
+            <div class="block-left-bottom">
+                <h2>Women's Kilts</h2>
+            </div>
+            <div class="block-right-bottom">
+                <h2>Children's Kilts</h2>
+            </div>
         </section>
 
 
