--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
 
         </section>
         <section class="container-block4-general">
-            <div class="block-left-image">
+            <div class="block-left-center">
                 <div class="image-left"></div>
             </div>
-            <div class="block-right-image">
+            <div class="block-right-center">
                 <div class="image-right"></div>
             </div>
             <div class="block-left-bottom">
