added block five.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="CSS/Two-block-general-page.css">
     <link rel="stylesheet" href="CSS/tree-block-general-page.css">
     <link rel="stylesheet" href="/CSS/four-block-general.css">
+    <link rel="stylesheet" href="/CSS/five-block-general-page.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
@@ -76,13 +77,6 @@
                 </div>
             </div>
         </main>
-        <!-- <section class="two-block-general-page">
-            <div class="two-block-general-page-h2">
-                <h2>HIGHLAND WEAR</h2>
-            </div>
-           
-
-        </section> -->
         <section class="container-block2-general">
             <div class="grid-0-head">
                 <h2>HIGHLAND WEAR</h2>
@@ -161,13 +155,28 @@
                 <div class="image-right"></div>
             </div>
             <div class="block-left-bottom">
-                <h2>Women's Kilts</h2>
+                <a href="/">
+                    <h2>Women's Kilts</h2>
+                </a>
             </div>
             <div class="block-right-bottom">
-                <h2>Children's Kilts</h2>
+                <a href="/">
+                    <h2>Children's Kilts</h2>
+                </a>
             </div>
         </section>
-
+        <section class="five-block-general-page">
+            <div class="item-one-five-block"><a href="/">
+                    <h2>Sign up and save 10% off your order!</h2>
+                </a></div>
+            <form action="#">
+                <input class="input-email-form" type="email" name="" id="" placeholder="Enter your email">
+            </form>
+            <div class="item-tree-block"><a href="/">Subscribe</a></div>
+            <div class="item-four-block">
+                <h2>We hold your data until you choose to unsubscribe</h2>
+            </div>
+        </section>
 
 
 </body>
