add last block of general page(six)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="CSS/tree-block-general-page.css">
     <link rel="stylesheet" href="/CSS/four-block-general.css">
     <link rel="stylesheet" href="/CSS/five-block-general-page.css">
+    <link rel="stylesheet" href="/CSS/six-block-general-end.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
@@ -172,14 +173,68 @@
             <form action="#">
                 <input class="input-email-form" type="email" name="" id="" placeholder="Enter your email">
             </form>
-            <div class="item-tree-block"><a href="/">Subscribe</a></div>
+            <div class="item-tree-block"><a href="/">
+                    <h2>Subscribe</h2>
+                </a></div>
             <div class="item-four-block">
                 <h2>We hold your data until you choose to unsubscribe</h2>
             </div>
 
         </section>
 
-
+        <section class="six-block-footer">
+            <div class="six-block-item1">
+                <h2>FAST WORLDWIDE<br>DELIVERY</h2>
+            </div>
+            <div class="six-block-item2"></div>
+            <div class="six-block-item3">
+                <h2>FREE UK SHIPPING ON<br>ORDERS OVER £50</h2>
+            </div>
+            <div class="six-block-item4">
+                <h2>EARN REWARDS WITH<br>EVERY PURCHASE</h2>
+            </div>
+            <div class="six-block-item5"></div>
+            <div class="six-block-item6">
+                <h2>FREE UK RETURNS</h2>
+            </div>
+            <div class="six-block-item7"><a href="/">
+                    <h2>HIGHLAND WEAR</h2>
+                </a><a href="/"><h2>KILT HIRE</h2></a></div>
+            <div class="six-block-item8"><a href="/">
+                    <h2>MEN</h2>
+                </a>
+                <a href="/">
+                    <h2>WOMEN</h2>
+                </a>
+            </div>
+            <div class="six-block-item9"><a href="/">
+                    <h2>CHILDREN</h2>
+                </a><a href="/"><h2>TARTAN FINDER</h2></a></div>
+            <div class="six-block-item10"><a href="/">
+                    <h2>ABOUT</h2>
+                </a><a href="/"><h2>BLOG</h2></a></div>
+            <div class="six-block-item11"><a href="/">
+                    <h2>CONTACT US</h2>
+                </a><a href="/"><h2>RETURNS</h2></a></div>
+            <div class="six-block-item12"><a href="/">
+                    <h2>MEASURING GUIDE</h2>
+                </a><a href="/"><h2>LOYALTY PROGRAMME</h2></a></div>
+            <div class="six-block-item13">
+                <h2>© Copyright Scotland Kilt Co 2022</h2>
+            </div>
+            <!-- <div class="six-block-item14"></div> -->
+            <div class="six-block-item15"><a href="/">
+                    <h2>Privacy Policy</h2>
+                </a></div>
+            <div class="six-block-item16"><a href="/">
+                    <h2>Terms & Conditions</h2>
+                </a></div>
+            <div class="six-block-item17"><a href="https://x.com/" class="twitter"><img src="/images/Twitter.png"
+                        alt=""></a><a href="https://www.youtube.com" class="youtube"><img src="/images/YouTube.png"
+                        alt=""></a><a href="https://www.google.ru/" class="google"><img src="/images/Google.png"
+                        alt=""></a></div>
+            <!-- <div class="six-block-item18"></div> -->
+        </section>
 </body>
 
 </html>
