с первой страницей пока все. переход на карточку товара

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="grid-4">
                 <div class="grid-4-image"></div>
                 <div class="grid-4-title">
-                    <h2>Kilt Outfits</h2>
+                    <a href="/link-of-product.html" target="_blank"><h2>Kilt Outfits</h2></a>
                 </div>
             </div>
             <div class="grid-5">
@@ -181,7 +181,6 @@
             </div>
 
         </section>
-
         <section class="six-block-footer">
             <div class="six-block-item1">
                 <h2>FAST WORLDWIDE<br>DELIVERY</h2>
@@ -229,9 +228,9 @@
             <div class="six-block-item16"><a href="/">
                     <h2>Terms & Conditions</h2>
                 </a></div>
-            <div class="six-block-item17"><a href="https://x.com/" class="twitter"><img src="/images/Twitter.png"
-                        alt=""></a><a href="https://www.youtube.com" class="youtube"><img src="/images/YouTube.png"
-                        alt=""></a><a href="https://www.google.ru/" class="google"><img src="/images/Google.png"
+            <div class="six-block-item17"><a href="https://x.com/" target="_blank" class="twitter"><img src="/images/Twitter.png"
+                        alt=""></a><a href="https://www.youtube.com" target="_blank" class="youtube"><img src="/images/YouTube.png"
+                        alt=""></a><a href="https://www.google.ru/" target="_blank" class="google"><img src="/images/Google.png"
                         alt=""></a></div>
             <!-- <div class="six-block-item18"></div> -->
         </section>
