I'm added folder with js

--- a/index.html
+++ b/index.html
@@ -234,6 +234,8 @@
                         alt=""></a></div>
             <!-- <div class="six-block-item18"></div> -->
         </section>
+
+        <script src="/js/script.js"></script>
 </body>
 
 </html>
