--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
                         alt=""></a></div>
             <!-- <div class="six-block-item18"></div> -->
         </section>
+        <button type="button" class="button" >button</button>
 
         <script src="/js/script.js"></script>
 </body>
