заменил пути к css

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KIlt</title>
-    <link rel="stylesheet" href="CSS/styleNull2.css">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/one-Block-general-page.css">
-    <link rel="stylesheet" href="CSS/Two-block-general-page.css">
-    <link rel="stylesheet" href="CSS/tree-block-general-page.css">
-    <link rel="stylesheet" href="/CSS/four-block-general.css">
-    <link rel="stylesheet" href="/CSS/five-block-general-page.css">
-    <link rel="stylesheet" href="/CSS/six-block-general-end.css">
+    <link rel="stylesheet" href="./CSS/styleNull2.css">
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/one-Block-general-page.css">
+    <link rel="stylesheet" href="./CSS/Two-block-general-page.css">
+    <link rel="stylesheet" href="./CSS/tree-block-general-page.css">
+    <link rel="stylesheet" href="./CSS/four-block-general.css">
+    <link rel="stylesheet" href="./CSS/five-block-general-page.css">
+    <link rel="stylesheet" href="./CSS/six-block-general-end.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
