правка адреса иконок  твитер гугл ютубчик

--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
             <div class="six-block-item16"><a href="/">
                     <h2>Terms & Conditions</h2>
                 </a></div>
-            <div class="six-block-item17"><a href="https://x.com/" target="_blank" class="twitter"><img src="/images/Twitter.png"
-                        alt=""></a><a href="https://www.youtube.com" target="_blank" class="youtube"><img src="/images/YouTube.png"
-                        alt=""></a><a href="https://www.google.ru/" target="_blank" class="google"><img src="/images/Google.png"
+            <div class="six-block-item17"><a href="https://x.com/" target="_blank" class="twitter"><img src="../images/Twitter.png"
+                        alt=""></a><a href="https://www.youtube.com" target="_blank" class="youtube"><img src="../images/YouTube.png"
+                        alt=""></a><a href="https://www.google.ru/" target="_blank" class="google"><img src="../images/Google.png"
                         alt=""></a></div>
             <!-- <div class="six-block-item18"></div> -->
         </section>
